--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ project(${This} C CXX)
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
-
+set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
 enable_testing()
 add_subdirectory(googletest)
 
